project/example/CMRLibrary.css
.cmr-rotated-base-wrapper {
    width: 100%;
    height: 100%;
    position: absolute;
}

.cmr-rotation-base {
    width: 100%;
    height: 100%;
    position: absolute;
}

.cmr-image-move-wrapper {
    width: 100%;
    height: 100%;
    position: absolute;
}

.cmr-resize-image-wrapper {
    cursor: move;
    position: absolute;
    transform-origin: top left;
    outline: 2px solid rgb(98, 166, 255);
}

.cmr-resize-image-wrapper:active {
    cursor: grab;
}

.cmr-resize-wrapper {
    position: absolute;
}

.cmr-crop-wrapper {
    position: absolute;
}

.cmr-image {
    transform-origin: top left;
    position: absolute;
}

.cmr-rotation {
    width: 100%;
    height: 100%;
    position: absolute;
}

.cmr-base {
    position: relative;
    user-select: none;
    overflow: hidden;
}

.cmr-real-crop {
    transform-origin: top left;
    overflow: hidden;
    display: inline-block;
    line-height: 0;
    position: absolute;
    box-shadow: 0px 0px 0px 20000px #d3d3d3;
}

.cmr-real-crop.edit {
    box-shadow: 0px 0px 0px 20000px #00000088;
}

.cmr-crop {
    position: absolute;
    box-shadow: 0px 0px 0px 20000px #00000080;
    outline: 1px solid violet;
    z-index: 2;
}

.cmr-resize {
    position: absolute;
}

.cmr-active-screen {
    width: 100%;
    height: 100%;
    cursor: move;
    position: absolute;
}

.cmr-center-symbol {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 15px;
    height: 15px;
}

.cmr-active-screen:active {
    cursor: grab;
}

.cmr-cropper-frames {
    position: absolute;
    outline: 1px dashed #ffffff88;
}

.cmr-cropper-frames.vert {
    width: calc(100% / 3);
    height: 100%;
    left: calc(100% / 3);
}

.cmr-cropper-frames.hor {
    width: 100%;
    height: calc(100% / 3);
    top: calc(100% / 3);
}

.cmr-cropper-point {
    position: absolute;
    width: 6px;
    height: 6px;
    background-color: violet;
    z-index: 1;
}

.cmr-resizer-point {
    position: absolute;
    width: 6px;
    height: 6px;
    background-color: rgb(46, 161, 255);
    z-index: 1;
}

.cmr-point-e {
    cursor: move;
    margin-top: -3px;
    right: -3px;
    top: 50%;
}

.cmr-point-n {
    cursor: move;
    left: 50%;
    margin-left: -3px;
    top: -3px;
}

.cmr-point-w {
    cursor: move;
    left: -3px;
    margin-top: -3px;
    top: 50%;
}

.cmr-point-s {
    bottom: -3px;
    cursor: move;
    left: 50%;
    margin-left: -3px;
}

.cmr-point-ne {
    cursor: move;
    right: -3px;
    top: -3px;
}

.cmr-point-nw {
    cursor: move;
    left: -3px;
    top: -3px;
}

.cmr-point-sw {
    bottom: -3px;
    cursor: move;
    left: -3px;
}

.cmr-point-se {
    bottom: -3px;
    cursor: move;
    opacity: 1;
    right: -3px;
}

